<resources>
    <string name="app_name">Must Notice Board</string>
    <string name="launcher_text">Get News Here</string>
    <string name="launcher_header">University Notice Board App</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="btnLoginText">Login</string>
    <string name="registerText">Register Here</string>
    <string name="dontHaveAccount">Need An Account?</string>
    <string name="dialog_label">Create New Account</string>
    <string name="dialog_email_hint">Enter Email Address</string>
    <string name="dialog_password_hint">Enter Password</string>
    <string name="dialog_confirm_hint">Confirm Paasowrd</string>
    <string name="dialog_resiter_btn">Register</string>
    <string name="dialog_cancel_btn">Close</string>\
    <string name="dialog_terms">Accept the terms and conditions</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="contact">Tel: +256 774165087\nEmail: jimmytrevor@gmail.com\nWebsite: www.must.ac.ug</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testing">To achieve this, we shall gather requirements for our system and below are the main requirements for the system grouped into Functional and Non-functional requirements. The functional requirements include the following: The system will be able to support user registration services before using it. The company will able to register workers using the system. The system will be to generate daily reports to the managing director. The system will be able manage the information about all the workers of the organization. The system will be to provide statistical data to the company to top managers for further use. This will be of reports (daily, weekly, monthly and annual reports). The system will be able to record all the information about the organization such as activities done, employee data, products data and others. The system will require each to sign in and out every time of work in order manage the workers attendance The system will allow communication between the workers and the managers of the company by providing a communication space. The system will store information about the customers of Codinex. The System will be able to assess the performance of each worker basing on their attendance records and transactions made at a given time interval. The system will show information about the absence and presence of workers. The non-functional requirements include the following; The system will be able to interoperate or work with other software and hardware to perform different tasks. The system will able to authenticate each user where it will allow users to login in with their credentials The system will able to respond quickly in case a request is made by the user (minimum response time to user requests). The proposed system will maintainable. The proposed system will be friendly to the users The system will also error free in that it will not cause error when it is being used. The system will also be accessible. The system will support concurrency by allowing multiple user to be logged in using the system at the same time. GOALS OF IMPLEMENTATION The system shall support the use of external systems for example the use CCTV cameras to enhance its functionality in order to achieve its goals. The system shall be accessed offline and this will be an added component to our system which might be effective in period of 5 years after the installation of the system. THE PROPOSED SYSTEM ARCHITECURE. The proposed architecture is repository architecture which includes a set of components /sub components which share exchange data through a central repository. With this architecture, the subsystems are allowed to access data, use it, update from the repository. We decided to use the above architecture because the proposed attendance and monitoring system is to be connected to a set of multiple other systems such as the security system, records system, the database system. A REPORT OF THE CONCEPTS USED IN THE SYSTEM PROPOSED. The proposed system is the Monitoring and Attendance management system that was proposed for Codinex Computer Limited To begin with, under requirements engineering we looked at the feasibility study for our project and the deliverable for this was that the project is feasible both technically and financially to be developed. In addition to the above, requirements analysis is predicted in the software requirements specifications document where we categorized the requirements into functional and non-functional requirements. In this we had to cater for the basic requirements of the stake holders. Basing on the needs of the system we chose to use the repository architecture for planning, designing and building of the proposed system. We modelled our system in different ways to graphically and diagrammatically represent the requirements of our system to the user. The models include the content diagram (showing the main entities of the system), the flow chart (showing the flow of the system), the sequence diagrams of different process (showing how different users will interact with the system).</string>
    <string name="fullnameHint">Enter Full name</string>
    <string name="course_hint">Course eg BIT,BCE,BME</string>
    <string name="year_of_study">Year eg 1,2,3,4</string>
</resources>
